# wylux

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/autostart/: mod.rs  startup_folder.rs
src/cli/: mod.rs
src/cli/commands/: autostart.rs  doctor.rs  down.rs  init.rs  mod.rs  ssh.rs  status.rs  terminal.rs  up.rs  vscode.rs
src/config/: load.rs  mod.rs  schema.rs  validate.rs  vars.rs
src/config/paths/: mod.rs  root.rs  ssh.rs  terminal_fragments.rs  vscode.rs
src/doctor/: checks.rs  mod.rs  report.rs
src/integration/: connection.rs  event_bus.rs  mod.rs  protocol.rs  registry.rs
src/output/: human.rs  json.rs  mod.rs
src/qemu/: accel.rs  argv.rs  locate.rs  mod.rs  probe.rs  spawn.rs
src/state/: io.rs  lock.rs  mod.rs  model.rs
src/terminal/: fragment.rs  guid.rs  mod.rs
src/util/: fs_atomic.rs  hashing.rs  mod.rs  net.rs  process.rs  time.rs
src/vscode/: mod.rs  ssh_config.rs
umbra/: XPRA-CURRENT.md  XPRA-FUTURE.md  architecture.md  argv.md  main.md  rust.md  terminal.md
